--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=2345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/insideDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/insideDBC
 spring.datasource.username=postgres
 spring.datasource.password=MasterKey6
 spring.datasource.driver-class-name=org.postgresql.Driver
