--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   app:
     container_name: "InsideDemo_container"
-    image: inside-demo-project
+    image: "sibugato/inside-demo"
     build: ./
     restart: always
     ports:
